fix(style): No content jump on error messages

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,3 +31,8 @@ code {
   padding: 0;
   width: 40px;
 }
+
+.error-message {
+  font-size: 1rem;
+  min-height: 1.5rem;
+}
